отладил приложение
